# libwtf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/export/darwin/: exports.txt
cmake/export/linux/: exports.txt
cmake/export/windows/: wtf.def.in
cmake/patches/msquic/: reliable-reset-draft07.patch
docs/: CERTS.md
include/: wtf.h
samples/: CMakeLists.txt  echo_client.c  echo_server.c
src/: cert.c  cert.h  client.c  client.h  conn.c  conn.h  context.c  datagram.c  datagram.h  draft.c  draft.h  http3.c  http3.h  log.h  qpack.c  qpack.h  server.c  session.c  session.h  settings.c  stream.c  stream.h  types.h  utils.c  utils.h  varint.c  varint.h
tests/: CMakeLists.txt  test_e2e.c
tests/browser_chrome/: interop.py  pyproject.toml  server.c
tests/public/: test_public_api.cc
tests/unit/: test_draft_negotiation.cc  test_public_api.cc  test_settings.cc  test_utils.cc  test_varint.cc
